--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,23 @@ name: test
 on: workflow_dispatch
 
 jobs:
-  test:
+  init:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+    - id: set-matrix
+      run: write-output "matrix=[1,2,3]" >> $env:GITHUB_OUTPUT
+      shell: pwsh
+  scatter:
+    needs: init
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{fromJson(needs.init.outputs.matrix)}}
+    steps:
+    - run: echo ${{ matrix }}
+  merge:
+    needs: scatter
     runs-on: ubuntu-latest
     steps:
-      - run: echo "# WOOT! 🚀" >> $env:GITHUB_STEP_SUMMARY
-        shell: pwsh
+    - run: echo "DONE!"
