--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
     - id: set-matrix
-      run: write-output "matrix=[1,2,3]" >> $env:GITHUB_OUTPUT
+      run: |
+         write-output "matrix={jobs: [1,2,3]}" >> $env:GITHUB_OUTPUT
       shell: pwsh
   scatter:
     needs: init
