--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
           echo $env:JSON
           echo $env:VAR
       env:
-        VAR: "${{ matrix.job }}"
-        JSON: "${{ toJson(matrix) }}"
+        VAR: ${{ matrix.job }}
+        JSON: ${{ toJson(matrix) }}
       shell: pwsh
   merge:
     needs: scatter
