--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,9 @@ jobs:
       matrix: ${{fromJson(needs.init.outputs.matrix)}}
     steps:
     - name: "Print matrix"
-      env:
-        JSON: ${{ toJson(matrix) }}
       shell: pwsh
       run: |
-          echo $env:JSON
+          echo '${{ toJson(matrix) }}'
   merge:
     needs: scatter
     runs-on: ubuntu-latest
