--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
       run: |
           echo $env:scope
       env:
-        scope: toJson(env)
+        scope: ${{ toJson(env) }}
       shell: pwsh
